--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="bg-blue-500 p-3 text-center text-5xl font-mono leading-10">
       <span class="sm:text-green-400 text-black lg:hidden flex"
-        ><h1>Hello world</h1></span
+        ><h1>Hello Guys</h1></span
       >
       <span class="lg:flex hidden text-center"
         ><h1>Hello fellow Developers</h1></span
